Cambio de slogan, ajusto el req/res

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -48,11 +48,10 @@
             <div class="content">
                 <h3>Yo soy Federico</h3>
                 <span class="tag">Desarrollador FullStack apasionado</span>
-                <p>Actualmente realizo cursos de programacion en
-                    Informática. Soy un trabajador fuera del sector IT. Soy una persona curiosa y
+                <p>Realizo programacion en
+                    Informática. Un trabajador del sector IT. Soy una persona curiosa y
                     aprender nuevas tecnologías me resulta muy tentador. Un desarrollador con muchas capacidades y ganas
-                    de seguir aprendiendo backend y
-                    una enorme pila de front-end. Un desarrollador FullStack con mucho más que ofrecer.</p>
+                    de seguir aprendiendo, marcando la diferencia! Solo es dedicacion y confianza, paginas totalmente didacticas.</p>
 
                 <div class="box-container">
                     <div class="box">
