--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -56,7 +56,7 @@
                 <div class="box-container">
                     <div class="box">
                         <p><span> Años: </span> 24</p>
-                        <p><span> Celular : </span> <a href="tel:+541141761096">
+                        <p><span> Celular : </span> <a href="https://api.whatsapp.com/send?phone=541141761096&text=More+information+about+%7C+M%C3%A1s+informacion+sobre%3A+">
                                 +54 (11) 4176-1096
                             </a></p>
                     </div>
